# Zram_WebUI

./: .gitignore  .gitmodules  action.sh  build.gradle.kts  build.sh  build_for_GITHUBACTION.sh  customize.sh  gradle.properties  service.sh  settings.gradle.kts  update.json
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_module_commit.yml  build_module_release_tag.yml  deploy-docs.yml
docs/: README.md  index.md  module_development.md  webui-develop.md  webui.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.js  md3.css  style.css
docs/en/: README.md  index.md  module_development.md  webui-develop.md  webui.md
files/: languages.sh
files/scripts/: service_script.sh  zram.sh  zram_pressure_log.sh
files/scripts/default_scripts/: logger.sh  main.sh
gradle/: libs.versions.toml
module/: build.gradle.kts
module/c/: f2fs_pin.c
module/cpp/: logmonitor.cpp
module/cpp/filewatcher/: CMakeLists.txt
module/cpp/filewatcher/src/: CMakeLists.txt  watcher_core.h  watcher_core.hpp
module/src/: action.sh  customize.sh  module.prop  sepolicy.rule  verify.sh
module/src/files/: languages.sh
module/src/files/scripts/: zram.sh
module/src/module_settings/: build_config.sh  config.sh  settings.json
module/src/webroot/: app.js  config.json  config.mmrl.json  css-loader.js  i18n.js  index.html  pages.json  safe-area.js  theme.js
module/src/webroot/css/: components.css
module/src/webroot/pages/: about.js  logs.js  settings.js  status.js
module_settings/: build_config.sh  config.sh
src/: filewatch.cpp  logmonitor.cpp
src/filewatcher/src/: filewatcher.cpp  watcher_core.cpp
webroot/: app.js  core.js  css-loader.js  index.html  theme.js
webroot/css/: style.css
webroot/css/pages/: about.css  logs.css  settings.css  status.css
webroot/pages/: about.js  logs.js  settings.js  status.js
webroot/translations/: en.json  ru.json  zh.json
(+5 files in other folders)
